Fix image source and update Google Maps iframe

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="item">
     <a href="./images/screen4.png" data-lightbox="appscreens"
        data-title="Report a problem using AI-powered detection">
-      <img src="./images/screen4.png" alt="Report a problem">
+      <img src="./images/Screen4.png" alt="Report a problem">
     </a>
   </div>
 
@@ -289,7 +289,7 @@
       </form>
     </div>
     <div class="col-lg-6">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.9982121735464!2d-122.08424948469245!3d37.4219999798259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5cb29975b69%3A0x77b7b4e528b0c6b6!2sGoogleplex!5e0!3m2!1sen!2sid!4v1618477596623!5m2!1sen!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d440154.251184961!2d31.145021278537005!3d30.47279024506959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f7df5a4163d605%3A0x6d8d8c16bd36bffe!2z2YXYrdin2YHYuNipINin2YTZhdmG2YjZgdmK2KnYjCDZhdi12LE!5e0!3m2!1sar!2sus!4v1769802811680!5m2!1sar!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
     </div>
   </div>
   <div class="row text-center mt-5 gy-4">
